DB - card alignment fix

--- a/app/modules/contact/contact-card-view.css
+++ b/app/modules/contact/contact-card-view.css
@@ -19,7 +19,7 @@ div.portfoliocard{
 div.portfoliocard div.coverphoto{
 	width:100%;
 	height:120px;
-	background-position:center center;
+	background-size: 100%;
 	border-top-right-radius:5px;
 	border-top-left-radius:5px;
 	border-bottom:1px solid rgba(0,0,0,0.1);
